--- a/giF0S_Project/Theme2/Styles2/Styles2.scss
+++ b/giF0S_Project/Theme2/Styles2/Styles2.scss
@@ -1,16 +1,16 @@
-$themeonegradientcolor1:#F7C9F3;
-$themeonegradientcolor2:#4180F6;
+$themeonegradientcolor1:#EE3EFE;
+$themeonegradientcolor2:#2E32FB;
 $outsidebordercolor:#110038;
 $fontcolorheader:#FFFFFF;
-$backgroundcolorbtn:#F7C9F3;
-$backgroundcolorsearchbox: #E6E6E6;
-$searchBarColor: #B4B4B4;
+$backgroundcolorbtn:#EE3EFE;
+$backgroundcolorsearchbox: #B4B4B4;
+$searchBarColor: #8F8F8F;
 $primaryfont: "Chakra Petch";
 
 body {
     margin: 0%;
     padding: 0%;
-    background-color: rgb(250, 241, 249);
+    background-color: #110038;
 }
 
 #title {
@@ -46,11 +46,8 @@ body {
         display: block;
         width: 144px;
         height: 36px;
+        color: $fontcolorheader;
         background-color: $backgroundcolorbtn;
-        color: $outsidebordercolor;
-        font-size: 16px;
-        font-weight: 400;
-        font-family: $primaryfont;
         margin-left: 47.6%;
         margin-top: 44px;
         margin-bottom: 38px;
@@ -60,11 +57,8 @@ body {
         display: block;
         width: 131px;
         height: 36px;
+        color: $fontcolorheader;
         background-color: $backgroundcolorbtn;
-        color: $outsidebordercolor;
-        font-size: 16px;
-        font-weight: 400;
-        font-family: $primaryfont;
         margin-left: 16px;
         margin-top: 44px;
         margin-bottom: 38px;
@@ -79,7 +73,8 @@ body {
         margin-top: 44px;
         margin-bottom: 38px;
         appearance: none;
-        background-image: url(../Images/dropdown.svg);
+        background-image: url(../../Images/forward.svg);
+        transform: rotate(-270deg);
         background-position: center;
         background-repeat: no-repeat;
     }
@@ -87,10 +82,7 @@ body {
     p {
         margin-right: 83, 4492%;
         margin-left: 1.147%;
-        color: $outsidebordercolor;
-        font-size: 16px;
-        font-weight: 400;
-        font-family: $primaryfont;
+        color: $fontcolorheader;
     }
 }
 
@@ -128,7 +120,7 @@ body {
             margin-left: 15px;
 
             &::placeholder {
-                color: $searchBarColor;
+                color: $backgroundcolorsearchbox;
                 font-size: 16px;
                 font-family: $primaryfont;
                 font-weight: 400;
@@ -140,7 +132,7 @@ body {
             margin-left: 8px;
             width: 8.5%;
             height: 36px;
-            background-color: $backgroundcolorsearchbox ;
+            background-color: $backgroundcolorsearchbox;
             color: $searchBarColor;
             font-size: 16px;
             font-family: $primaryfont;
@@ -161,13 +153,15 @@ body {
         width: 83.17%;
         margin-left: 6.9%;
         margin-top: 76px;
-        &::placeholder{
+
+        &::placeholder {
             color: $outsidebordercolor;
-            font-family: $primaryfont;
             font-size: 14px;
+            font-family: $primaryfont;
             font-weight: 400;
         }
     }
+
 }
 
 #GifSugget {
@@ -233,8 +227,8 @@ body {
         margin-left: 6.9541%;
         &::placeholder{
             color: $outsidebordercolor;
-            font-family: $primaryfont;
             font-size: 14px;
+            font-family: $primaryfont;
             font-weight: 400;
         }
     }
